# aizen-agent

./: .aizen_config.json  .coverage  .gitignore  CHANGELOG.md  README.md  aether.py  publish.sh  pyproject.toml  requirements.txt  scratch.py  setup.py
.github/workflows/: ci.yml
aether/: __init__.py  commands.py  config.py  context.py  exceptions.py  main.py  mcp.py  retry.py  session.py  tools.py  utils.py
aizen/: agent.py  analytics.py  commands.py  config.py  context.py  exceptions.py  main.py  mcp.py  memory.py  plugins.py  project.py  rag.py  retry.py  session.py  shell.py  streamlit_app.py  tools.py  utils.py
aizen/cmd/: __init__.py  completer.py  git_cmds.py  memory_cmds.py  misc_cmds.py  model_cmds.py  registry.py  search_cmds.py  session_cmds.py
aizen/tools/: browser.py  commands.py  dispatcher.py  file_ops.py  helpers.py  search.py  treesitter_utils.py
tests/: conftest.py  test_commands.py  test_config.py  test_context.py  test_file_ops.py  test_main.py  test_mcp.py  test_rag_search.py  test_security.py  test_session.py  test_tools.py  test_utils.py
