[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aizen-ai-cli"
version = "2.7.0"
description = "A professional-grade AI coding assistant for your terminal."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Irtaza Malik"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
keywords = ["ai", "cli", "coding-assistant", "terminal", "openrouter", "llm"]

dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "questionary>=2.0.0",
    "mcp>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
aizen = "aizen.main:main"

[project.urls]
Homepage = "https://github.com/irtaza302/aizen-agent"
Repository = "https://github.com/irtaza302/aizen-agent"
Issues = "https://github.com/irtaza302/aizen-agent/issues"

[tool.setuptools.packages.find]
include = ["aizen*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
